--- a/smash_overlay.html
+++ b/smash_overlay.html
@@ -109,8 +109,12 @@
         [data-theme="remix"] .center-logo {
             width: 120px; height: 120px;
             border-radius: 50%; border: 4px solid white;
-            background-image: url('https://i.imgur.com/uR1yS3c.png'); /* Yoshi Logo */
-            background-size: cover; background-position: center;
+            /* UPDATED LOGO URL */
+            background-image: url('https://raw.githubusercontent.com/destronfgc/stillwatersmash/main/images/STRLogo.png');
+            background-size: contain; /* Use 'contain' to ensure the whole logo is visible */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: #1a202c; /* Added a dark bg to the circle */
         }
         [data-theme="remix"] .match-info-box {
             background-color: #6FFFB0; color: #1A202C;
