--- a/smash_overlay.html
+++ b/smash_overlay.html
@@ -61,6 +61,11 @@
             color: #FF7300;
             font-family: 'Oswald', sans-serif;
         }
+        /* OSU THEME FIX: Status text should be black */
+        [data-theme="osu"] .score-box .secondary-text {
+            color: #232323;
+            text-shadow: none;
+        }
         [data-theme="osu"] .p1-score-box { clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 75%); }
         [data-theme="osu"] .p2-score-box { clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 100%, 0 100%); }
         [data-theme="osu"] .p1-bar { background-color: #FF7300; }
@@ -78,7 +83,6 @@
         }
         
         /* --- REMIX THEME --- */
-        /* REMOVED the broken background image */
         [data-theme="remix"] .player-tag-text {
             font-family: 'Anton', sans-serif;
             font-size: 2.5rem;
@@ -99,7 +103,7 @@
             color: #6FFFB0;
             font-family: 'Anton', sans-serif;
         }
-         /* NEW styles for Remix theme status text */
+        /* REMIX THEME FIX: Status text styles */
         [data-theme="remix"] .score-box .secondary-text {
             color: white;
             font-family: 'Anton', sans-serif;
@@ -135,7 +139,7 @@
         <div class="h-full flex items-center">
             <div id="p1ScoreBox" class="score-box p1-score-box flex flex-col items-center justify-center">
                 <span id="p1Score" class="text-4xl leading-none">0</span>
-                <span id="p1Status" class="secondary-text text-black text-xs -mt-1" style="text-shadow: none;"></span>
+                <span id="p1Status" class="secondary-text text-xs -mt-1"></span>
             </div>
             <div class="p1-bar h-[70px] flex items-center justify-center pr-4" style="width: 450px;">
                 <div class="flex flex-col items-center text-center overflow-hidden w-[350px]">
@@ -163,7 +167,7 @@
             </div>
             <div id="p2ScoreBox" class="score-box p2-score-box flex flex-col items-center justify-center">
                 <span id="p2Score" class="text-4xl leading-none">0</span>
-                <span id="p2Status" class="secondary-text text-black text-xs -mt-1" style="text-shadow: none;"></span>
+                <span id="p2Status" class="secondary-text text-xs -mt-1"></span>
             </div>
         </div>
 
