--- a/smash_overlay.html
+++ b/smash_overlay.html
@@ -61,10 +61,13 @@
             color: #FF7300;
             font-family: 'Oswald', sans-serif;
         }
-        /* OSU THEME FIX: Status text should be black */
+        /* OSU THEME FIX: Correct font, size, and color for status text */
         [data-theme="osu"] .score-box .secondary-text {
             color: #232323;
             text-shadow: none;
+            font-family: 'Oswald', sans-serif;
+            font-size: 0.75rem; /* 12px */
+            margin-top: -0.25rem;
         }
         [data-theme="osu"] .p1-score-box { clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 75%); }
         [data-theme="osu"] .p2-score-box { clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 100%, 0 100%); }
@@ -103,12 +106,13 @@
             color: #6FFFB0;
             font-family: 'Anton', sans-serif;
         }
-        /* REMIX THEME FIX: Status text styles */
+        /* REMIX THEME: Status text styles */
         [data-theme="remix"] .score-box .secondary-text {
             color: white;
             font-family: 'Anton', sans-serif;
             font-size: 0.9rem;
             text-shadow: none;
+            margin-top: -0.25rem;
         }
         [data-theme="remix"] .p1-bar, [data-theme="remix"] .p2-bar {
             background-color: rgba(26, 32, 44, 0.8);
@@ -139,7 +143,7 @@
         <div class="h-full flex items-center">
             <div id="p1ScoreBox" class="score-box p1-score-box flex flex-col items-center justify-center">
                 <span id="p1Score" class="text-4xl leading-none">0</span>
-                <span id="p1Status" class="secondary-text text-xs -mt-1"></span>
+                <span id="p1Status" class="secondary-text"></span>
             </div>
             <div class="p1-bar h-[70px] flex items-center justify-center pr-4" style="width: 450px;">
                 <div class="flex flex-col items-center text-center overflow-hidden w-[350px]">
@@ -167,7 +171,7 @@
             </div>
             <div id="p2ScoreBox" class="score-box p2-score-box flex flex-col items-center justify-center">
                 <span id="p2Score" class="text-4xl leading-none">0</span>
-                <span id="p2Status" class="secondary-text text-xs -mt-1"></span>
+                <span id="p2Status" class="secondary-text"></span>
             </div>
         </div>
 
